# vela-controller

./: .dockerignore  .gitignore  README.md  pyproject.toml  schemathesis.toml  storage-backend-tasks.md
.github/workflows/: _build.yml  _deploy.yml  checks.yml  ci-deploy.yml  ci-pr-cleanup.yml  ci-pr.yml  deploy-studio.yaml  deploy.yaml  deploy.yml  image.yml  openapi.yaml
chart/: Chart.yaml  README.md  kubeconfig  values-dev.yaml  values.schema.json  values.yaml
chart/files/: local.realm.json  realm.json
chart/templates/: _helpers.tpl  auth.yaml  certificate.yaml  clusterissuer.yaml  clusterrole.yaml  controller.yaml  database.yaml  db-init-script-secret.yaml  db-init-sgscript.yaml  db-migration-job.yaml  fluentbit-config.yaml  fluentbit.yaml  kong.yaml  logflare.yaml  monitoring.yaml  patcher.yaml  public-gateway.yaml  studio.yaml  vector-config.yaml  vector-sa.yaml  vector.yaml
chart/templates/controller/: beat.yaml  configmap.yaml  deployment.yaml  rbac.yaml  secret.yaml  service.yaml  worker.yaml
charts/supabase/: values.example.yaml
charts/supabase/templates/db/: vm.yaml
code/: database.py  docker-compose.yml  kubernetes_service.py  main.py  models.py  requirements.txt  test_api.py
containers/: Caddyfile  Containerfile  compose-ci.yml  compose-dev.yml  compose.yml  haproxy.cfg  init.sql  realm.json
containers/jwks/: generate_jwks.py  generate_jwt.py
deployment/: .gitignore  README.md  old.py
deployment/addons/: cert-manager.tf  kong.tf  kube-ovn.tf  kubevirt.tf  loki.tf  loki.yaml  main.tf  metallb.tf  metrics-server.tf  prometheus.tf  provider.tf  simplyblock.tf  stackgres.tf  terraform.tfvars.example  variables.tf
deployment/cluster/: cluster.tf  files.tf  kubeconfig.yaml  locals.tf  main.tf  terraform.tfvars.example  variable.tf  virtual_machines.tf
deployment/gcp/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
deployment/ubuntu/: README.md  files.tf  locals.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  virtual_machines.tf
docs/: backup_and_resource_limits.md  backup_and_resource_limits_and_rbac.md  grafana.md  kubevirt.md  manual-deployment.md  neon-autoscaler.md  pvc-clone-restore.md  service-account-kubeconfig.md  supabase-identity-mapping.md  testing-branch-services.md  todos.md
kind/: kind.yaml  setup.sh
kubernetes/: auth.yaml  backend.yaml  controller.yaml  database.yaml  studio.yaml
samples/: pgbouncer-svc.yaml  pgbouncer.yaml  pvc.yaml  svc.yaml  vm-restore.yaml  vm-snapshot.yaml  vm.yaml
samples/withkubevirt/: cm.yaml  deploy.yaml
scripts/: alembic.py
src/: __init__.py  _util.py  api.py  check_branch_status.py  constants.py  database.py  db.py  exceptions.py  settings.py
src/_util/: __init__.py  backup_config.py  crypto.py
src/api/: __init__.py  _util.py  access_right_utils.py  auth.py  backup.py  backup_main.py  backup_snapshots.py  backupmonitor.py  crypto.py  db.py  dependencies.py  keycloak.py  kubevirt.py  provision.py  resources.py  ressources.py  roles_access_rights.py  settings.py  system.py  user.py  users.py  util.py  vela.py
src/api/_util/: __init__.py  backups.py  certs.py  crypto.py  resourcelimit.py  role.py
src/api/models/: __init__.py  _util.py  ar.sql  audit.py  backups.py  base.py  branch.py  db.sql  membership.py  organization.py  project.py  resources.py  ressources.py  role.py  user.py
src/api/monitors/: resize.py
src/api/organization/: __init__.py  branch.py  member.py  project.py  resources.py  role.py
src/api/organization/member/: __init__.py
src/api/organization/project/: __init__.py  backup.py  branch.py  resources.py
src/deployment/: __init__.py  _util.py  compose.yml  constants.py  delete.py  deployment.py  grafana.py  health.py  kubernetes.py  kubevirt.py  logflare.py  pg_hba.conf  pgexporter.json  postgresql.conf  rebalance.py  resize.py  settings.py  simplyblock_api.py  vector.yaml  vector.yml  wal_cleanup.py
src/deployment/charts/supabase/: README.md  values.example.yaml  values.schema.json  values.yaml
src/deployment/charts/vela/: Chart.yaml  README.md  values.yaml
src/deployment/kubernetes/: __init__.py  _util.py  _wait.py  kubevirt.py  neonvm.py  pvc.py  snapshot.py  volume_clone.py
src/deployment/monitors/: __init__.py  health.py  resize.py
src/deployment/monitors/resize/: __init__.py  memory_resize.py  pvc_resize.py
src/deployment/storage_backends/: __init__.py  base.py  lvm.py  simplyblock.py
src/models/: __init__.py  _base.py  _util.py  audit.py  backups.py  branch.py  deployment.py  events.py  membership.py  organization.py  project.py  resources.py  role.py  user.py  vela.py
src/models/migrations/: env.py  script.py.mako
src/models/migrations/versions/: 001d72d72900_system_limits.py  06bbdb4463ec_sbcli_snapshot_uuid.py  07822c477427_pgbouncerconfig_branch_id_cascade.py  1a5af56c61a7_pitr.py  bb1e1450fd9f_status.py  (+38 more)
src/worker/: __init__.py
tests/: conftest.py  schemathesis.py  test_backup_and_clone.py  test_backup_schedules.py  test_branches.py  test_health.py  test_organizations.py  test_projects.py  test_resources.py
tests/.hypothesis/constants/: 935482aa05ed172a
tests/branches/: test_basic.py  test_clone_restore.py  test_delete.py  test_start_stop.py
(+75 files in other folders)
