[build-system]
requires = ['setuptools>=61.0', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'vela'
requires-python = '>=3.13'
dynamic = ['version']
dependencies = [
    'fastapi',
    'uvicorn',
    'sqlmodel',
    'asyncpg',
    'pyjwt',
    'pydantic-settings',
    'kubernetes',
    'pyyaml',
    'email-validator',  # pydantic.EmailStr
]

[tool.setuptools]
package-dir = {'simplyblock.vela' = 'src'}
packages = ['simplyblock.vela']


[tool.tox]
requires = ['tox']
env_list = ['lint', 'type-check', 'test']

[tool.tox.env.lint]
description = 'Run linter'
deps = ['ruff']
commands = [['ruff', 'check']]

[tool.tox.env.type-check]
description = 'Run type checks'
deps = ['mypy']
commands = [['mypy', '--python-executable=python', 'src']]

[tool.tox.env.test]
description = 'Run API tests'
deps = ['schemathesis', 'httpx', 'testcontainers[postgres]']
commands = [['python3', 'tests/schemathesis.py']]


[tool.ruff]
target-version = 'py313'
line-length = 120

[tool.ruff.lint]
select = [
    'E',
    'W',
    'F',
    'I',
    'B',
    'C4',
    'UP',
    'ARG001',
    'ARG002',
    'ARG003',
    'ARG004',
    'ARG005',
    'N',
    'SIM',
    'TCH',
    'FBT',
    'A',
    'COM',
    'C90',
]


[tool.mypy]
python_version = '3.13'
check_untyped_defs = true
follow_untyped_imports = true
