[build-system]
requires = ['setuptools>=61.0', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'vela'
requires-python = '>=3.13'
dynamic = ['version']
dependencies = [
    'fastapi',
    'uvicorn',
    'sqlmodel',
    'asyncpg',
    'pyjwt',
    'pydantic==2.11.10',
    'pydantic-core==2.33.2',
    'pydantic-settings',
    'kubernetes-asyncio>=22.6.0',
    'pyyaml',
    'email-validator',  # pydantic.EmailStr
    'cryptography',  # JWT algorithms
    'pycryptodome',
    'python-keycloak',
    'python-ulid',
    'requests',
    'cloudflare',
]

[tool.setuptools]
package-dir = {'simplyblock.vela' = 'src'}
packages = ['simplyblock.vela']


[tool.tox]
requires = ['tox']
env_list = ['lint', 'type-check', 'format-check']

[tool.tox.env.lint]
description = 'Run linter'
labels = ['static']
deps = ['ruff']
commands = [['ruff', 'check']]

[tool.tox.env.type-check]
description = 'Run type checks'
labels = ['static']
deps = ['mypy']
commands = [['mypy', '--python-executable=python', 'src']]

[tool.tox.env.format-check]
description = 'Check code format'
labels = ['static']
deps = ['ruff']
commands = [['ruff', 'format', '--check']]


[tool.ruff]
target-version = 'py313'
line-length = 120
src = ['src']

[tool.ruff.lint]
select = [
    'E',
    'W',
    'F',
    'I',
    'B',
    'C4',
    'UP',
    'ARG001',
    'ARG002',
    'ARG003',
    'ARG004',
    'ARG005',
    'N',
    'SIM',
    'TCH',
    'FBT',
    'A',
    'COM818',
    'C90',
    'BLE001',
]


[tool.mypy]
python_version = '3.13'
check_untyped_defs = true
follow_untyped_imports = true
