[build-system]
requires = ['setuptools>=61.0', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'vela'
requires-python = '>=3.13'
dynamic = ['version']
dependencies = [
    'fastapi',
    'uvicorn',
    'sqlmodel>=0.0.25',
    'asyncpg',
    'psycopg[binary]>=3.1',
    'pyjwt',
    'pydantic==2.11.10',
    'pydantic-core==2.33.2',
    'pydantic-settings',
    'kubernetes-asyncio>=22.6.0',
    'kubernetes>=30.1.0',
    'pyyaml',
    'email-validator',  # pydantic.EmailStr
    'cryptography',  # JWT algorithms
    'pycryptodome',
    'python-keycloak',
    'python-ulid',
    'requests',
    'cloudflare',
    'alembic',
    'httpx',
]

[tool.setuptools]
package-dir = {'simplyblock.vela' = 'src', 'simplyblock.vela.models.migrations' = 'migrations'}
packages = ['simplyblock.vela']


[tool.tox]
requires = ['tox']
env_list = ['lint', 'type-check', 'format-check']

[tool.tox.env.lint]
description = 'Run linter'
labels = ['static']
deps = ['ruff']
commands = [['ruff', 'check']]
basepython = ['python3.13']

[tool.tox.env.type-check]
description = 'Run type checks'
labels = ['static']
deps = ['mypy']
commands = [['mypy', '--python-executable=python', 'src']]
basepython = ['python3.13']

[tool.tox.env.format-check]
description = 'Check code format'
labels = ['static']
deps = ['ruff']
commands = [['ruff', 'format', '--check']]
basepython = ['python3.13']

[tool.tox.env.alembic]
description = 'Manage migrations'
deps = ['testcontainers', 'psycopg[binary]']
commands = [['python3', 'scripts/alembic.py', '{posargs}']]
passenv = ['DOCKER_HOST']
basepython = ['python3.13']


[tool.ruff]
target-version = 'py313'
line-length = 120
src = ['src']
extend-exclude = ["src/models/migrations/versions/*"]

[tool.ruff.lint]
select = [
    'E',
    'W',
    'F',
    'I',
    'B',
    'C4',
    'UP',
    'ARG001',
    'ARG002',
    'ARG003',
    'ARG004',
    'ARG005',
    'N',
    'SIM',
    'TCH',
    'FBT',
    'A',
    'COM818',
    'C90',
    'BLE001',
]


[tool.mypy]
python_version = '3.13'
check_untyped_defs = true
follow_untyped_imports = true


[tool.alembic]
script_location = "%(here)s/src/models/migrations"
